--- a/samples/templates/labportal.html
+++ b/samples/templates/labportal.html
@@ -110,7 +110,7 @@
                                 {{ results_form.ph }}
                             </div>
                             <div class="form-group col-xs-6 col-sm-2">
-                                <input class="btn btn-primary" id="submit_sample_btn" name="commit" type="submit" value="Submit Results">
+                                <input class="btn btn-primary results_btn" id="submit_sample_btn" name="commit" type="submit" value="Submit Results">
                             </div>
                         </div>
                     </div>
