--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <!-- Fixed masthead -->
-    <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-masthead navbar-default navbar-fixed-top navbar-custom">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Easca Environmental</a>
+                <a class="navbar-brand" href="/"> <img id="logo"src="{% static 'img/logo.jpg' %}" alt="logo"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -69,7 +69,7 @@
         </div>
     </div>
     {% endif %}
-    <div class="container">
+    <div class="container main_container">
         {% block content %} {% endblock %}
     </div>
     <footer>
