--- a/samples/templates/labportal.html
+++ b/samples/templates/labportal.html
@@ -26,7 +26,7 @@
                     <input type="text" name="sample_ref" class="form-control search-input" id="sample_ref" />
                 </div>
                 <div class="form-group col-xs-12 col-sm-3">
-                    <input class="btn btn-primary" id="submit_sample_btn" name="commit" type="submit" value="Dispatch">
+                    <input class="btn btn-success" id="submit_sample_btn" name="commit" type="submit" value="Dispatch">
                 </div>
             </form>
         </div>
@@ -54,7 +54,7 @@
                     <input type="text" name="sample_ref" class="form-control search-input" id="sample_ref" />
                 </div>
                 <div class="form-group col-xs-12 col-sm-3">
-                    <input class="btn btn-primary" id="submit_sample_btn" name="commit" type="submit" value="Receive">
+                    <input class="btn btn-success" id="submit_sample_btn" name="commit" type="submit" value="Receive">
                 </div>
             </form>
         </div>
@@ -110,7 +110,7 @@
                                 {{ results_form.ph }}
                             </div>
                             <div class="form-group col-xs-6 col-sm-2">
-                                <input class="btn btn-primary results_btn" id="submit_sample_btn" name="commit" type="submit" value="Submit Results">
+                                <input class="btn btn-success results_btn" id="submit_sample_btn" name="commit" type="submit" value="Submit Results">
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                             {% else %}
                             <form action="{% url 'viewreport' sample.id %}" method="post">
                                 {% csrf_token %}
-                                <input class="btn btn-primary" type="submit" value="View">
+                                <input class="btn btn-success" type="submit" value="View">
                             </form>
                             {% endif %}
                         </td>
