--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,15 +1,33 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
 {% block content %}
-<form method="post" action="{% url 'login' %}?next={{ next }}" class="accountform">
-    <fieldset class="form-group">
-        <legend>Login</legend>
-        {% csrf_token %}
-        {{ user_form | as_bootstrap }}
+<div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+        <h3>First time customer?</h3>
+        <form method="post" action="{% url 'register' %}" class="accountform">
+            <fieldset class="form-group">
+                <legend>Create a new account</legend>
+                <p>Already got an account? <a href="{% url 'login' %}">Sign In</a></p>
+                {% csrf_token %}
+                {{  registration_form | as_bootstrap }}
+                <button type="submit" class="btn btn-primary">Create account</button>
+            </fieldset>
+        </form>
+    </div>
 
-        <p><a href="{% url 'password_reset' %}">Forgot my password</a></p>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2">
+        <h3>Already Registered?</h3>
+        <form method="post" action="{% url 'login' %}?next={{ next }}" class="accountform">
+            <fieldset class="form-group">
+                <legend>Login</legend>
+                {% csrf_token %}
+                {{ user_form | as_bootstrap }}
 
-        <button type="submit" class="btn btn-primary">Login</button>
-    </fieldset>
-</form>
+                <p><a href="{% url 'password_reset' %}">Forgot my password</a></p>
+
+                <button type="submit" class="btn btn-primary">Login</button>
+            </fieldset>
+        </form>
+    </div>
+</div>
 {% endblock %}
