--- a/samples/templates/yourportal.html
+++ b/samples/templates/yourportal.html
@@ -52,38 +52,28 @@
                 <table class="col-xs-12">
                     <tr>
                         <th>Sample Ref.</th>
-                        <th>Your Reference</th>
-                        <th>Date Sampled</th>
-                        <th>Status</th>
+                        <th>Your Ref.</th>
                         <th>View Report</th>
                     </tr>
-                    {% for status in statuss %}
-                    {% if status.status == "Complete" %}
-
+                    {% for sample in completed_samples %}
                     <tr>
-                        <td>{{ status.sample_ref }}</td>
-
-
-                        {% for sample in details %}
-                        {% if sample.sample == status %}
+                        <td>{{ sample.sample_ref }}</td>
+                        {% for sample_details in details %}
+                        {% if sample_details.sample == sample %}
                         <td>
-                            {{ sample.customer_ref_1 }} {{ sample.customer_ref_2 }}
-                        </td>
-                        <td>
-                            {{ sample.sample_date }}
+                            {{ sample_details.customer_ref_1 }} {{ sample_details.customer_ref_2 }}
                         </td>
 
                         {% endif %}
                         {% endfor %}
-                        <td>{{ status.status }}</td>
                         <td>
-                            <form action="{% url 'viewreport' status.id %}" method="post">
+
+                            <form action="{% url 'viewreport' sample.id %}" method="post">
                                 {% csrf_token %}
                                 <input class="btn btn-success" type="submit" value="View Report">
                             </form>
                         </td>
                     </tr>
-                    {% endif %}
                     {% endfor %}
                 </table>
             </div>
@@ -95,7 +85,7 @@
     <div class="row">
         <a data-toggle="collapse" href="#processing_collapse" role="button" aria-expanded="true" aria-controls="#processing_collapse">
             <div class="pull-left">
-                <h3>Samples Being Processed</h3>
+                <h3>Processing Samples</h3>
             </div>
             <div class="pull-right">
                 <h3><i class="fas fa-plus"></i></h3>
@@ -106,46 +96,44 @@
     <div class="collapse processing_collapse collapse_xs" id="processing_collapse">
         <p>
             Below is a list of samples being processed by Easca Environmental.
-            <br />It includes samples you have ordered, that we have yet to dispatch, as well as samples you have submitted and are awaiting results.
         </p>
         <div class="container">
             <div class="row">
                 <table class="col-xs-12">
                     <tr>
                         <th>Sample Ref.</th>
-                        <th>Your Reference</th>
-                        <th>Date Sampled</th>
                         <th>Status</th>
-                        <th>View Report</th>
+                        <th>Ordered Date</th>
+                        <th>Submitted Date</th>
+                        <th>Received Date</th>
+                        <th>Your Ref.</th>
+                        <th>Details</th>
                     </tr>
-                    {% for status in statuss %}
-                    {% if status.status == "Ordered" or status.status == "Submitted" or status.status == "Received" %}
+                    {% for sample in processing_samples %}
 
                     <tr>
-                        <td>{{ status.sample_ref }}</td>
-
-
-                        {% for sample in details %}
-                        {% if sample.sample == status %}
+                        <td>{{ sample.sample_ref }}</td>
+                        <td>{{ sample.status }}</td>
+                        <td>{{ sample.ordered_date.date }}</td>
+                        <td>{{ sample.submit_date.date }}</td>
+                        <td>{{ sample.received_date.date }}</td>
+                        {% for sample_details in details %}
+                        {% if sample_details.sample == sample %}
                         <td>
-                            {{ sample.customer_ref_1 }} {{ sample.customer_ref_2 }}
+                            {{ sample_details.customer_ref_1 }} {{ sample_details.customer_ref_2 }}
                         </td>
-                        <td>
-                            {{ sample.sample_date }}
-                        </td>
-
                         {% endif %}
                         {% endfor %}
-                        <td>{{ status.status }}</td>
-
                         <td>
-                            <form action="{% url 'viewreport' status.id %}" method="post">
+                            {% if sample.status == "Submitted" or sample.status == "Received" %}
+                            <form action="{% url 'viewreport' sample.id %}" method="post">
                                 {% csrf_token %}
-                                <input class="btn btn-success" type="submit" value="View Report">
+                                <input class="btn btn-success" type="submit" value="Details">
                             </form>
+                            {% endif %}
                         </td>
                     </tr>
-                    {% endif %}
+
                     {% endfor %}
                 </table>
             </div>
