--- a/templates/base.html
+++ b/templates/base.html
@@ -11,15 +11,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
 
     {% block head_heading %}
     {% endblock head_heading %}
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     {% block head_js %}
     {% endblock head_js %}
+
 </head>
 <body>
     <!-- Fixed masthead -->
@@ -32,16 +31,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"> <img id="logo"src="{% static 'img/logo.jpg' %}" alt="logo"></a>
+                <a class="navbar-brand" href="/"> <img id="logo" src="{% static 'img/logo.jpg' %}" alt="logo"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="{% url 'index' %}"><i class="fas fa-info"></i> About</a></li>
                     <li><a href="{% url 'products' %}"><i class="fab fa-product-hunt"></i> Services</a></li>
                     {% if user.is_authenticated %}
-                        {% if user.is_staff %}
-                        <li><a href="{% url 'labportal' %}"><i class="fas fa-flask"></i> Lab Portal</a></li>
-                        {% endif %}
+                    {% if user.is_staff %}
+                    <li><a href="{% url 'labportal' %}"><i class="fas fa-flask"></i> Lab Portal</a></li>
+                    {% endif %}
                     <li><a href="{% url 'yourportal' %}"><i class="fa fa-user"></i> Your Portal</a></li>
                     <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out-alt"></i> Log Out</a></li>
                     {%  else %}
@@ -76,5 +75,9 @@
             <p>Developed by Dan Casey</p>
         </div>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/custom.js' %}"></script>
+
 </body>
 </html>
