--- a/samples/templates/viewreport.html
+++ b/samples/templates/viewreport.html
@@ -69,8 +69,8 @@
             <div class="row">
                 <table class="col-xs-12 col-sm-6">
                     <tr>
-                        <th>P (ppm)</th>
-                        <th>K (ppm)</th>
+                        <th>P (mg/l)</th>
+                        <th>K (mg/l)</th>
                         <th>LR pH</th>
                         <th>pH</th>
                     </tr>
@@ -84,6 +84,153 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <h4>Phospherous, P = {{ results.p }} mg/l</h4>
+            <div class="row">
+                <div class="scale_value" style="position:relative; left: {{ p_perc }}%;"> {{ results.p }} mg/l</div>
+            </div>
+            <div class="row p_color_scale">
+                <div class="col-xs-3 scale_section">
+                    Very Low
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Low
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Adequit
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Sufficient
+                </div>
+            </div>
+            <div class="row p_number_scale">
+                <div class="col-xs-3 scale_num">
+                    0
+                </div>
+                <div class="col-xs-3 scale_num">
+                    3
+                </div>
+                <div class="col-xs-3 scale_num">
+                    6
+                </div>
+                <div class="col-xs-3 scale_num">
+                    8
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <h4>Potasium, K = {{ results.k }} mg/l</h4>
+            <div class="row">
+                <div class="scale_value" style="position:relative; left: {{ k_perc }}%;"> {{ results.k }} mg/l</div>
+            </div>
+            <div class="row k_color_scale">
+                <div class="col-xs-3 scale_section">
+                    Very Low
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Low
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Adequit
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Sufficient
+                </div>
+            </div>
+            <div class="row k_number_scale">
+                <div class="col-xs-3 scale_num">
+                    0
+                </div>
+                <div class="col-xs-3 scale_num">
+                    50
+                </div>
+                <div class="col-xs-3 scale_num">
+                    100
+                </div>
+                <div class="col-xs-3 scale_num">
+                    150
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <h4>pH = {{ results.ph }}</h4>
+            <div class="row">
+                <div class="scale_value" style="position:relative; left: {{ ph_perc }}%;"> {{ results.ph }}</div>
+            </div>
+            <div class="row ph_color_scale">
+                <div class="col-xs-3 scale_section">
+                    Very Acidic
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Acidic
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Neutral
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Basic
+                </div>
+            </div>
+            <div class="row ph_number_scale">
+                <div class="col-xs-3 scale_num">
+                    0
+                </div>
+                <div class="col-xs-3 scale_num">
+                    3
+                </div>
+                <div class="col-xs-3 scale_num">
+                    6
+                </div>
+                <div class="col-xs-3 scale_num">
+                    9
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <h4>Lime Reqirement pH = {{ results.lr_ph }}</h4>
+            <div class="row">
+                <div class="scale_value" style="position:relative; left: {{ lr_ph_perc }}%;"> {{ results.lr_ph }}</div>
+            </div>
+            <div class="row lr_ph_color_scale">
+                <div class="col-xs-3 scale_section">
+                    Very Acidic
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Acidic
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Neutral
+                </div>
+                <div class="col-xs-3 scale_section">
+                    Basic
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-3 scale_num">
+                    0
+                </div>
+                <div class="col-xs-3 scale_num">
+                    3
+                </div>
+                <div class="col-xs-3 scale_num">
+                    6
+                </div>
+                <div class="col-xs-3 scale_num">
+                    9
+                </div>
+            </div>
+        </div>
+    </div>
+
     {% endif %}
     <h3>Status Details</h3>
     <div class="row">
@@ -116,18 +263,18 @@
     </div>
 </div>
 
-{% block head_js %}
+        {% block head_js %}
 
 
-<script>
+        <script>
         var myLatLng = {
             lat: {{ details.sample_location.latitude }},
             lng: {{ details.sample_location.longitude }}
             };
-</script>
-<script src="{% static 'js/initMap.js' %}"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ GOOGLE__MAPS_API_KEY }}&callback=initMap" type="text/javascript"></script>
+        </script>
+        <script src="{% static 'js/initMap.js' %}"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ GOOGLE__MAPS_API_KEY }}&callback=initMap" type="text/javascript"></script>
 
 
-{% endblock %}
-{% endblock %}
+        {% endblock %}
+        {% endblock %}
