Add getLocation script to submitdetails.html

--- a/samples/templates/submitdetails.html
+++ b/samples/templates/submitdetails.html
@@ -21,6 +21,7 @@
 {% block head_js %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js"></script>
 <script src="{% static 'js/datePicker.js' %}"></script>
+<script src="{% static 'js/getLocation.js' %}"></script>
 {% endblock %}
 
 
